<resources>
    <string name="app_name">Task Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add Task</string>
    <string name="Header1"><b>Title</b></string>
    <string name="Header2"><b>Category</b></string>
    <string name="Header3"><b>Description</b></string>
    <string name="choose_task_category">Choose Task Category</string>
    <string name="update_task">Update Task</string>
    <string name="add_task_header"><b>Add Task</b></string>
    <string name="update_task_header">Update Task</string>
    <string name="title_field">Title</string>
    <string name="description_field">Description</string>
    <string name="category">Category:</string>
    <string name="header">Your Tasks</string>

    <string-array name="Category_list">
        <item>Penting Mendesak</item>
        <item>Tidak Penting Mendesak</item>
        <item>Penting Tidak Mendesak</item>
        <item>Tidak Penting Tidak Mendesak</item>
    </string-array>

</resources>