<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    android:id="@+id/rowLayout"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:elevation="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="@+id/card"
            app:layout_constraintStart_toStartOf="@id/card">

            <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/layout1"
                    app:layout_constraintStart_toStartOf="@+id/layout1">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_field"
                        android:background="@color/blue"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif"
                        android:padding="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/description_field"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@+id/title"/>


                </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>